# mystarhistory

./: .coverage  .gitignore  Dockerfile  HANDLEE-LICENSE  LICENSE  README.md  action.py  action.yml  entrypoint.sh  mystarhistory.py  pyproject.toml
.github/workflows/: deploy-landingpage.yml  star-history.yml  test.yml
docs/: CNAME  index.html
mystarhistory.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: conftest.py  regenerate_golden.py  test_action.py  test_build_cumulative.py  test_fetch_stargazers.py  test_fmt.py  test_generate_svg.py  test_main.py  test_smooth_path.py  test_text_el.py
